update for BUT3

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 						<li><a href="#" data-nav-section="services">Hard skills</a></li>
 						<li><a href="#" data-nav-section="skills">Soft skills</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
-						<li><a href="#" data-nav-section="work">Experience</a></li>
+						<li><a href="#" data-nav-section="work">Expérience</a></li>
+						<li><a href="#" data-nav-section="project">Projets</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
@@ -99,8 +100,8 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
-						   					<h1>Pierre Foulon, <br> 3ème année de BUT Informatique à l'IUT A de Lille <br> Alternant chez CarStudio</h1>
-												<p><a class="btn btn-primary btn-learn" href="CV - Recherche stage - Flouté.pdf" download="CV Pierre FOULON">Télécharger mon CV<i class="icon-download4"></i></a></p>
+						   					<h1>Pierre Foulon, <br> 3ème année de BUT Informatique <br> Alternant chez CarStudio Mobivia</h1>
+												<p><a class="btn btn-primary btn-learn" href="CV - Ingénieur du numérique en alternance - Online version.pdf" download="CV Pierre FOULON">Télécharger mon CV<i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -122,11 +123,16 @@
 										<h2 class="colorlib-heading">Qui suis-je ?</h2>
 										
 										<p><strong>Je suis Pierre FOULON</strong>, diplômé d’un BAC général mention BIEN, avec les spécialités Numérique et Sciences Informatiques ainsi que Mathématiques.
-										<p>	Aujourd’hui étudiant en deuxième année de BUT informatique à l’IUT A de Villeneuve-d’Ascq en spécialité parcours B : Déploiement d’applications communicantes et sécurisées. </p>
-											<p>Passionné d’informatique, cette formation paraissait évidente pour moi. J’ai pu étendre, au cours de ma formation, des compétences dans la gestion de systèmes et l’administration de réseau. Je suis capable de déployer des postes de travail, mettre en place des serveurs ainsi que les disposer sur un réseau, j’ai une certaine appétence dans la gestion de projet, j’apprécie organiser des projets et travailler en équipe.											
+										<p>	Aujourd’hui étudiant en dernière année de BUT informatique à l’IUT A de Villeneuve-d’Ascq en spécialité parcours B : Déploiement d’applications communicantes et sécurisées. </p>
+											<p> Passionné d’informatique, cette formation paraissait évidente pour moi. J’ai pu étendre, au cours de ma formation, des compétences dans la gestion de systèmes et l’administration de réseau. Je suis capable de déployer des postes de travail, mettre en place des serveurs ainsi que les disposer sur un réseau, j’ai une certaine appétence dans la gestion de projet, j’apprécie organiser des projets et travailler en équipe.											
 											</p>
-											<p>En parallèle j’ai pu améliorer mes capacités à l’oral ainsi qu’en gestion de projet suite aux différentes SAé proposées. Nous avons pu réaliser au cours de la formation BUT, plusieurs déploiement de postes de travail avec la configuration du réseau, de la gestion de base de données, le déploiement d’un serveur web ainsi que la création complète d’un Escape Game.												
-											</p>																		
+											<p> En parallèle j’ai pu améliorer mes capacités à l’oral ainsi qu’en gestion de projet suite aux différentes SAé proposées. Nous avons pu réaliser au cours de la formation BUT, plusieurs déploiement de postes de travail avec la configuration du réseau, de la gestion de base de données, le déploiement d’un serveur web ainsi que la création complète d’un Escape Game.												
+											</p>	
+										<p> Je suis actuellement en alternance chez CarStudio (Mobivia) en tant qu’administrateur systèmes et réseaux. J’assiste sur les projets informatique innovant pour le développement des nouvelles mobilités. Ma mission principale est la gestion, maintenance et support de l’infrastructure cloud Google Cloud Platform (GCP) pour nos collaborateurs. 
+										</p> 
+										<p>
+											Mon objectif est de continuer mes études en alternance dans le domaine de l’ingénierie informatique, afin de me spécialiser dans la sécurité informatique et le cloud computing.
+										</p>																	
 									</div>
 								</div>
 							</div>
@@ -154,7 +160,7 @@
 								</span>
 								<div class="desc">
 									<h3>Bash</h3>
-									<p>Utilisations de commandes. Changement de répertoire, modification de fichier, modifications de permissions, . . .</p>
+									<p>Scripting, automatisation, gestion des utilisateurs / des droits</p>
 								</div>
 							</div>
 						</div>
@@ -176,7 +182,7 @@
 								</span>
 								<div class="desc">
 									<h3>Base de données</h3>
-									<p>Utilisation et gestion de base de données en langae SQL, <br>plus particulièrement PostGreSQL</p>
+									<p>Utilisation et gestion de base de données en langae SQL, plus particulièrement PostGreSQL</p>
 								</div>
 							</div>
 						</div>
@@ -192,7 +198,7 @@
 							</div>
 						</div>
 						<div class="col-md-4 text-center animate-box">
-							<div class="services color-5">
+							<div class="services color-6">
 								<span class="icon">
 									<i class="icon-css3"></i>
 								</span>
@@ -204,18 +210,18 @@
 							</div>
 						</div>
 						<div class="col-md-4 text-center animate-box">
-							<div class="services color-6">
+							<div class="services color-1">
 								<span class="icon">
 									<img src="images/logoPython.png" alt="logoPython">
 								</span>
 								<div class="desc">
 									<h3>Python</h3>
-									<p>Faible base en scripting. <br>Utilisation algorithmique, connaissance de la syntaxe</p>
+									<p>Scripting et automatisation de tâches <br> Développement de microservices et d'API</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 text-center animate-box">
-							<div class="services color-4">
+							<div class="services color-2">
 								<span class="icon">
 									<img src="images/logoDocker.png">
 								</span>
@@ -225,36 +231,69 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-3">
+								<span class="icon">
+									<img src="images/terraform-logo.png">
+								</span>
+								<div class="desc">
+									<h3>Terraform</h3>
+									<p>Création, gestion et maintenance d'infrastructure cloud </p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-5">
+								<span class="icon">
+									<img src="images/Microsoft-Azure.png">
+								</span>
+								<div class="desc">
+									<h3>Microsoft Azure</h3>
+									<p>Création, gestion d'infrastructure cloud, utilisation des services principaux de l'hébergeur <br>
+										Stockage, VM, réseaux, sous-réseaux, . . .
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-4">
+								<span class="icon">
+									<img src="images/gcp-logo.png">
+								</span>
+								<div class="desc">
+									<h3>Google Cloud Platform</h3>
+									<p>	Outil principal utilisé durant mon alternance. Utilisation des services principaux de l'hébergeur<br>
+										Compute Engine, Cloud Run, Cloud Build, Firestore, . . . </p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-1">
+								<span class="icon">
+									<img src="images/ansible_logo.png">
+								</span>
+								<div class="desc">
+									<h3>Ansible</h3>
+									<p>Création, gestion et maintenance d'infrastructure cloud </p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-2">
+								<span class="icon">
+									<img src="images/Linux-logo.png">
+								</span>
+								<div class="desc">
+									<h3>Unix (Debian, Ubuntu, . . .)</h3>
+									<p> 		Administration, gestion de droits, gestion de paquets, . . . <br>
+										Utilisation en lignes de commande, gestion de services, . . .</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
 			
-			<!-- <div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
-				<div class="overlay"></div>
-				<div class="colorlib-narrow-content">
-					<div class="row">
-					</div>
-					<div class="row">
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="309" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Cups of coffee</span>
-						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="356" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Projects</span>
-						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="30" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Clients</span>
-						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Partners</span>
-						</div>
-					</div>
-				</div>
-			</div> -->
-
 			<section class="colorlib-skills" data-section="skills">
 				<div class="colorlib-narrow-content">
 					<div class="row">
@@ -301,7 +340,7 @@
 							<div class="col-md-4 text-center animate-box">
 								<div class="services color-4">
 									<span class="icon">
-										<i class="icon-css3"></i>
+										<i class="icon-bulb"></i>
 									</span>
 									<div class="desc">
 										<h3>Adaptabilité</h3>
@@ -323,7 +362,7 @@
 							<div class="col-md-4 text-center animate-box">
 								<div class="services color-6">
 									<span class="icon">
-										<i class="icon-phone3"></i>
+										<i class="icon-display2"></i>
 									</span>
 									<div class="desc">
 										<h3>Leadership</h3>
@@ -376,7 +415,53 @@
 				</div>
 			</section>
 
-			<section class="colorlib-work" data-section="work">
+			<section class="colorlib-education" data-section="work">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Parcours</span>
+							<h2 class="colorlib-heading animate-box">Professionnel</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+				         <div class="timeline-centered">
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-1">
+					                  <i class="icon-display2"></i>
+					               </div>
+					               <div class="timeline-label">
+					                  <h2><a href="#">Alternant apprenti IT</a> <span>JUILLET 2023 - AUJOURD'HUI</span> <br> <span>CarStudio (Mobivia), 2A Bd Van Gogh, 59650 Villeneuve-d'Ascq</span></h2>
+					                  <p>J'assiste sur les projets informatique innovant pour le développement des nouvelles mobilités
+										<br> Mission principale: Gestion, maintenance et support de l'infrastructure cloud Google Cloud Platform (GCP) pour nos collaborateurs.
+									  </p>
+					               </div>
+					            </div>
+					         </article>
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-2">
+									<i class="icon-bulb"></i>
+					               </div>
+									<div class="timeline-label">
+										<h2><a href="#">Stage fin de 2ème année BUT</a> <span>AVRIL 2023 - JUIN 2023</span> 
+											<br> <span>CarStudio (Mobivia), 2A Bd Van Gogh, 59650 Villeneuve-d'Ascq</span></h2>
+										<p>Mission : Création et intégration d'un coffre fort d'identifiants <br>
+											Les sites des constructeurs automobiles proposent des abonnement de consultation.
+											Ces abonnements nécessitent des comptes utilisateur utilisés par plusieurs personnes du service CarStudio. <br>
+											</p>
+									 </div>
+					            </div>
+					         </article>
+					      </div>
+					   </div>
+				   </div>
+				</div>
+			</section>
+
+
+			<section class="colorlib-work" data-section="project">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -516,6 +601,38 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="project" style="background-image: url(images/ihm-carstudio.png);">
+							<div class="desc">
+								<div class="con">
+									<h3>IHM-Hubtech</h3>
+									<span> 
+										Mon sujet de stage était de créer et intégrer une plateforme web regroupant les identifiants de nos collaborateurs afin qu'ils puissent accéder aux différents outils des constructeurs automobiles. <br>
+										Le but était de créer une interface simple et intuitive pour les utilisateurs. J'ai donc du apprendre à utiliser les outils de Google Cloud Platform, ainsi que les services principaux de l'hébergeur. J'ai également du apprendre à utiliser les outils de développement web, notamment Angular pour la partie visuelle et Python pour l'interaction avec les services de Google</span>
+									</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="project" style="background-image: url(images/infra-cloud.png);">
+							<div class="desc">
+								<div class="con">
+									<h3>Gestion et maintenance d'une infrastructure cloud</h3>
+									<span>
+										Nous avons besoins d'outils qui suivent la dynamique de l'entreprise, c'est pourquoi nous avons choisis de travailler avec Google Cloud Platform qui est un outil très complet et qui est dans l'air du temps. <br> 
+										Ma mission principale est la gestion, la maintenance et le support de l'infrastructure cloud pour nos collaborateurs. <br>
+										J'ai developpé des compétences en Terraform pour la création, la gestion et la maintenance d'infrastructure cloud. <br>
+										J'ai donc du apprendre à utiliser les services pour le cloud computing de l'hébergeur ainsi que le stockage, les réseaux, les sous-réseaux, les VM disponibles. <br>
+
+									</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+
+
 					</div>
 				</div>
 			</section>
