--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 											</p>
 											<p> En parallèle j’ai pu améliorer mes capacités à l’oral ainsi qu’en gestion de projet suite aux différentes SAé proposées. Nous avons pu réaliser au cours de la formation BUT, plusieurs déploiement de postes de travail avec la configuration du réseau, de la gestion de base de données, le déploiement d’un serveur web ainsi que la création complète d’un Escape Game.												
 											</p>	
-										<p> Je suis actuellement en alternance chez CarStudio (Mobivia) en tant qu’administrateur systèmes et réseaux. J’assiste sur les projets informatique innovant pour le développement des nouvelles mobilités. Ma mission principale est la gestion, maintenance et support de l’infrastructure cloud Google Cloud Platform (GCP) pour nos collaborateurs. 
+										<p> Je suis actuellement en alternance chez CarStudio (Mobivia) en tant qu’Assistant IT. J’assiste sur les projets informatique innovant pour le développement des nouvelles mobilités. Ma mission principale est la gestion, maintenance et support de l’infrastructure cloud Google Cloud Platform (GCP) pour nos collaborateurs. 
 										</p> 
 										<p>
 											Mon objectif est de continuer mes études en alternance dans le domaine de l’ingénierie informatique, afin de me spécialiser dans la sécurité informatique et le cloud computing.
@@ -160,7 +160,9 @@
 								</span>
 								<div class="desc">
 									<h3>Bash</h3>
-									<p>Scripting, automatisation, gestion des utilisateurs / des droits</p>
+									<p>Scripting, automatisation, gestion des utilisateurs / des droits
+										<br> Création de scripts pour automatiser des tâches répétitives
+									</p>
 								</div>
 							</div>
 						</div>
@@ -434,7 +436,7 @@
 					               <div class="timeline-label">
 					                  <h2><a href="#">Alternant apprenti IT</a> <span>JUILLET 2023 - AUJOURD'HUI</span> <br> <span>CarStudio (Mobivia), 2A Bd Van Gogh, 59650 Villeneuve-d'Ascq</span></h2>
 					                  <p>J'assiste sur les projets informatique innovant pour le développement des nouvelles mobilités
-										<br> Mission principale: Gestion, maintenance et support de l'infrastructure cloud Google Cloud Platform (GCP) pour nos collaborateurs.
+										<br> Mission principale: Gestion, développement, maintenance et support de l'infrastructure cloud Google Cloud Platform (GCP) pour nos collaborateurs.
 									  </p>
 					               </div>
 					            </div>
@@ -450,6 +452,12 @@
 										<p>Mission : Création et intégration d'un coffre fort d'identifiants <br>
 											Les sites des constructeurs automobiles proposent des abonnement de consultation.
 											Ces abonnements nécessitent des comptes utilisateur utilisés par plusieurs personnes du service CarStudio. <br>
+											J’ai donc appris à utiliser les différents services de Google Cloud Platform (GCP) ainsi qu’à
+											comprendre le langage utilisé pour la création des interfaces, Angular, basé sur Javascript.
+											J’ai principalement réalisé toutes les fonctionnalités liés au back-end, l’interaction avec
+											GCP ainsi que la conception et la gestion de la base de données. Je me suis occupé de
+											l’authetification et le filtrage des utilisateurs ainsi que l’accès aux VMs qui contiennent les
+											outils constructeurs.
 											</p>
 									 </div>
 					            </div>
@@ -615,7 +623,7 @@
 						</div>
 					</div>
 					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-						<div class="project" style="background-image: url(images/infra-cloud.png);">
+						<div class="project" style="background-image: url(images/infra_gcp.png);">
 							<div class="desc">
 								<div class="con">
 									<h3>Gestion et maintenance d'une infrastructure cloud</h3>
@@ -653,7 +661,7 @@
 									<i class="icon-mail5"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="mailto:foulon.pierre2003@gmail.com?subject=Offre de stage">foulon.pierre2003@gmail.com</a></p>
+									<p><a href="mailto:foulon.pierre2003@gmail.com">foulon.pierre2003@gmail.com</a></p>
 								</div>
 							</div>
 
@@ -670,7 +678,7 @@
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel:+33782122031">+33 7 82 12 20 31</a></p>
+									<p>+33 7 xx xx xx xx</p>
 								</div>
 							</div>
 							
